--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,4 @@ include_directories(include)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Werror -Wshadow -Wdouble-promotion -pedantic-errors")
 
-add_executable(Implementing_libc main.c)
+add_executable(Implementing_libc main.c include/string.h src/string.c tests/tests.c tests/tests.h)
