Added cpy function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ project(Implementing_libc C)
 include_directories(include)
 
 set(CMAKE_C_STANDARD 11)
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Werror -Wshadow -Wdouble-promotion -pedantic-errors")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Werror -Wshadow -pedantic-errors")
 
 add_executable(Implementing_libc main.c include/string.h src/string.c tests/tests.c tests/tests.h)
