Added str_ch function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,15 @@
 cmake_minimum_required(VERSION 3.19)
-project(Implementing_libc C)
+project(simole_std_lib VERSION 0.1 LANGUAGES C)
 
 include_directories(include)
 
 set(CMAKE_C_STANDARD 11)
+
+###################################################################################################
+##
+##      Compilation options
+##
+###################################################################################################
 add_compile_options(
         -Werror
 
@@ -19,6 +25,4 @@ add_compile_options(
         -Wredundant-decls
         -Wsign-conversion
 )
-
-
 add_executable(Implementing_libc main.c include/string.h src/string.c tests/tests.c tests/tests.h)
