rename file uniqie_ptr.h to uniqie_ptr.hpp. change CMakeLists.h

--- a/smart_pointers/CMakeLists.txt
+++ b/smart_pointers/CMakeLists.txt
@@ -6,8 +6,11 @@
 
 cmake_minimum_required(VERSION 3.16)
 
-set(PROJECT_NAME libc)
-project(${PROJECT_NAME} VERSION 0.0.1 LANGUAGES C)
+set(PROJECT_NAME smart_pointers)
+project(${PROJECT_NAME} VERSION 1.0.0
+        DESCRIPTION "simple smart pointers library"
+        LANGUAGES CXX
+        )
 
 ###################################################################################################
 ##
@@ -24,11 +27,16 @@ add_compile_options(
 
         -Wcast-align
         -Wcast-qual
-
         -Wconversion
+        -Wctor-dtor-privacy
+        -Wenum-compare
         -Wfloat-equal
+        -Wnon-virtual-dtor
+        -Wold-style-cast
+        -Woverloaded-virtual
         -Wredundant-decls
         -Wsign-conversion
+        -Wsign-promo
 )
 
 ###################################################################################################
@@ -36,19 +44,22 @@ add_compile_options(
 ##      Project options
 ##
 ###################################################################################################
-
-include_directories(include tests)
 set(SOURCES
-        src/main.c
-        src/string.c
-        tests/tests.c src/memory.c src/garbage_collector.c)
-set(HEADERS
-        include/string.h
-        tests/tests.h include/memory.h include/garbage_collector.h)
-        
-add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
+        unique_ptr.hpp)
 
-include (CTest)
-add_test(valgrind_test ${PROJECT_NAME})
-
-add_subdirectory(smart_pointers)
+add_library(${PROJECT_NAME} STATIC ${SOURCES})
+set_target_properties(
+        ${PROJECT_NAME} PROPERTIES
+        LINKER_LANGUAGE CXX
+        CXX_STANDARD 17
+        CXX_STANDARD_REQUIRED ON
+)
+       
+add_executable(tests main.cpp)
+set_target_properties(
+        tests PROPERTIES
+        LINKER_LANGUAGE CXX
+        CXX_STANDARD 17
+        CXX_STANDARD_REQUIRED ON
+)
+target_link_libraries(tests ${PROJECT_NAME})
